--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -76,10 +76,10 @@
 
                         <div class="caption">
                             <div class="row">
-                                <div class="col-xs-12 col-md-8" >
+                                <div class="col-xs-12 col-md-8" style="text-align: center" >
                                     <div th:if="${item.itemCount == 0}">
+                                        <p style="color: red; font-weight: bold; float: left; padding-left: 30px;">품절</p>
                                         <div style="text-decoration-color: chartreuse;padding-left: 65px;">
-                                            <p style="color: red; font-weight: bold; float: left">품절</p>
                                             <em style=" font: italic bold 1.5em/1em Georgia, serif; text-align: left"
                                                 th:text="${#numbers.formatCurrency(item.itemPrice)}"></em>
                                         </div>
