--- a/src/main/resources/templates/memberPages/admin.html
+++ b/src/main/resources/templates/memberPages/admin.html
@@ -19,6 +19,7 @@
 </head>
 <body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
+<th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
 <a href="/item/main" class="btn btn-primary">상품관리</a>
 <a href="/order/listAll" class="btn btn-primary">주문관리</a>
 <a href="/member/list" class="btn btn-primary">회원 관리</a>
