--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body style="background-color: white">
-<th:block th:replace="commonPages/header :: header"></th:block>
+<th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
         <tr>
