--- a/src/main/resources/templates/orderPages/orderListAll.html
+++ b/src/main/resources/templates/orderPages/orderListAll.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body style="background-color: white">
-<th:block th:replace="commonPages/header :: header"></th:block>
+<th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
 <div class="main">
 <div th:if="${orderList == 'empty'}">
     <p>주문내역이 없습니다.</p>
