--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body style="background-color: white">
-<th:block th:replace="commonPages/header :: header"></th:block>
+<th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
 <div class="container" id="question-list">
     <table class="table table-striped table-hover text-center" th:if="${message} != 'null'">
         <tr>
