--- a/src/main/resources/templates/orderPages/orderList.html
+++ b/src/main/resources/templates/orderPages/orderList.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
     <title>orderList</title>
     <meta charset="utf-8">
     <link rel="stylesheet" th:href="@{/css/starRating.css}" type="text/css">
@@ -9,9 +8,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
+          rel="stylesheet">
+    <style>
+        *{
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        .main{
+            width: 800px;
+            height: 409px;
+            left: 411px;
+            top: 85px;
+            margin-top: 50px;
+            /*가운데 정렬 margin: auto*/
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
+<div class="main">
 <div th:if="${orderList == 'empty'}">
     <p>주문내역이 없습니다.</p>
 </div>
@@ -21,12 +43,13 @@
             <th>주문번호</th>
             <th>상품이름</th>
             <th>배송상태</th>
-            <th>리뷰작성</th>
+            <th style="border-bottom: 1px solid #ddd">리뷰작성</th>
         </tr>
-        <tr th:each="order: ${orderList}">
+        <tr th:each="order: ${orderList}" style="border-bottom: 1px solid #ddd">
             <td th:text="${order.id}"></td>
             <td><a th:href="@{/items(orderName=${order.orderName})}" th:text="${order.orderName}"></a></td>
             <td th:text="${order.orderStatus}"></td>
+
             <ui th:if="${order.orderStatus == '배송완료'}">
                 <td th:if="${order.review} == '리뷰작성'">
                     <button type="button" th:id="${order.id}" class="btn btn-secondary" data-toggle="modal" data-target="#myModal"
@@ -67,6 +90,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </body>
 
