--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="header">
     <meta charset="UTF-8">
-    <title>header</title>
+    <title>index</title>
     <script th:src="@{/js/axios.min.js}"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="/static/js/bootstrap.bundle.js"></script>
