--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>orderSave</title>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="text/javascript"
             src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
