--- a/src/main/resources/templates/questionPages/questionSave.html
+++ b/src/main/resources/templates/questionPages/questionSave.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>questionSave</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!--  폰트-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
