오픈api / 크롤링 설정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -147,10 +147,13 @@
 
 </div>
 
+<a href="/apis" >api</a>
+
+
+
+
 </body>
 <script th:inline="javascript">
-
-
 
     const cart = () => {
         const form = document.querySelector('form');
