비밀번호 찾기

--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -42,6 +42,7 @@
         </section>
         <div>
             <p class="mt-5">회원이 아니신가요? <a href="/member/save" class="btn-dark" style="font-weight: bold;">가입하기</a></p>
+            <p class="mt-5">비밀번호를 잊으셨나요? <a href="/member/searchPassword" class="btn-dark" style="font-weight: bold;">비밀번호 찾기</a></p>
         </div>
     </article>
     <article class="join">
