--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -151,7 +151,7 @@
       },
       success : function(data){
         if (data == "fail"){
-          alert("이미 가입된 이메일입니다. 확인해주세요")
+          alert("이미 가입된 이메일입니다. 확인해주세요");
         }else {
           alert("해당 이메일로 인증번호 발송이 완료되었습니다. \n 확인부탁드립니다.")
           document.getElementById("mailconfirmCheck").value = data;
