--- a/src/main/resources/templates/itemPages/itemSave.html
+++ b/src/main/resources/templates/itemPages/itemSave.html
@@ -85,6 +85,7 @@
 </div>
 </body>
 <script type="text/javascript">
+<!--대표이미지 미리보기-->
     function readURL(input){
         if(input.files && input.files[0]){
             var reader = new FileReader();
@@ -96,52 +97,6 @@
             document.getElementById("preview").src="";
         }
     }
-
-    // function readMultipleImage(input) {
-    //     const multipleContainer = document.getElementById('multipleContainer')
-    //
-    //     if (input.files) {
-    //         console.log(input.files)
-    //         const fileArr = Array.from(input.files)
-    //         const $colDiv1 = document.createElement('div')
-    //         const $colDiv2 = document.createElement('div')
-    //         $colDiv1.classList.add('column')
-    //         $colDiv2.classList.add('column')
-    //         fileArr.forEach((file, index) => {
-    //             const reader = new FileReader()
-    //             const $imgDiv = document.createElement('div')
-    //             const $img = document.createElement('img')
-    //             $img.classList.add('image')
-    //             const $label = document.createElement('label')
-    //             $label.classList.add('image-label')
-    //             $label.textContent = file.name
-    //             $imgDiv.appendChild($img)
-    //             $imgDiv.appendChild($label)
-    //             reader.onload = e => {
-    //                 $img.src = e.target.result
-    //
-    //                 //$imgDiv.style.width = ($img.naturalWidth) * 0.2 + "px"
-    //                 //$imgDiv.style.height = ($img.naturalHeight) * 0.2 + "px"
-    //             }
-    //
-    //             console.log(file.name)
-    //             if (index % 2 == 0) {
-    //                 $colDiv1.appendChild($imgDiv)
-    //             } else {
-    //                 $colDiv2.appendChild($imgDiv)
-    //             }
-    //
-    //             reader.readAsDataURL(file)
-    //         })
-    //         multipleContainer.appendChild($colDiv1)
-    //         multipleContainer.appendChild($colDiv2)
-    //     }
-    // }
-    //
-    // // 이벤트 리스너
-    // document.getElementById('inputMultipleImage').addEventListener('change', (e) => {
-    //     readMultipleImage(e.target);
-    // })
 
 
 </script>
