--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>questionList</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/fe9e42f1d2.js" crossorigin="anonymous"></script>
 
@@ -34,7 +33,12 @@
     </style>
 </head>
 <body style="background-color: white">
-<th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
+<div th:if="${session.member?.userId == 'admin'}">
+    <th:block th:replace="commonPages/sidebar :: sidebar"></th:block>
+</div>
+<div th:unless="${session.member?.userId == 'admin'}">
+    <th:block th:replace="commonPages/header :: header"></th:block>
+</div>
 <div class="container" id="question-list">
     <table class="table table-striped table-hover text-center" th:if="${message} != 'null'">
         <tr>
