--- a/src/main/resources/templates/apiPages/todayFlowerList.html
+++ b/src/main/resources/templates/apiPages/todayFlowerList.html
@@ -36,6 +36,11 @@
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
 
+<div th:if="${list} == 'no'">
+    <h1>검색 결과가 없습니다.</h1>
+</div>
+
+<div th:unless="${list} == 'no'">
 <table class="table table-striped table-hover text-center" th:if="${todayFlowerList} != 'null'">
   <tr>
     <th style="text-align: center">번호</th>
@@ -97,6 +102,7 @@
       </div>
     </ul>
   </nav>
+</div>
 </div>
 
 </body>
