숫자 콤마 전체 제거

--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -131,7 +131,7 @@
     const orderFn = () => {
 
         let itemPriceTotal2 = document.querySelector(".item_price_total").innerHTML;
-        let itemPriceTotal = itemPriceTotal2.replace(',', '');
+        let itemPriceTotal = itemPriceTotal2.replace(/,/g, '');
         console.log("정규식확인" + itemPriceTotal)
 
         const length = document.getElementById("cartList").value;
