이메일인증 필수입력 제외

--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -124,18 +124,18 @@
     //   alert('이메일을 정확히 입력해주세요');
     //   return false;
     // }
-    if (mailconfirm === '') {
-      alert('인증번호를 입력해주세요');
-      return false;
-    }
-    if (mailconfirmCheck === '') {
-      alert('인증번호를 확인해주세요');
-      return false;
-    }
-    if (mailconfirm !== mailconfirmCheck) {
-      alert('인증번호가 일치하지 않습니다.');
-      return false;
-    }
+    // if (mailconfirm === '') {
+    //   alert('인증번호를 입력해주세요');
+    //   return false;
+    // }
+    // if (mailconfirmCheck === '') {
+    //   alert('인증번호를 확인해주세요');
+    //   return false;
+    // }
+    // if (mailconfirm !== mailconfirmCheck) {
+    //   alert('인증번호가 일치하지 않습니다.');
+    //   return false;
+    // }
     document.join.submit();
 
   }
