--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -77,7 +77,7 @@
                             <img th:src="@{/img/today.jpg}" alt="top_btn">
                             <div class="search">
                                 <!-- 부트스트랩 검색창 -->
-                                <form class="navbar-form navbar-left" role="search">
+                                <div class="navbar-form navbar-left" role="search">
                                     <div class="form-group">
                                         <select class="form-control" id="searchType2">
                                             <option value="1" >꽃이름</option>
@@ -88,7 +88,7 @@
                                         <input type="button" value="검색" class="form-control" onclick="searchQ2()">
 
                                     </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
 
